Content collection model

--- a/src/content/slides/2.md
+++ b/src/content/slides/2.md
@@ -1,7 +1,13 @@
 ---
-title: Hypermedia, de hoeksteen van het web
-page-type: single-column-page
+title: Wat is een Hypermedia-Driven Application?
+pageType: single-column-page
 ---
 
-- Dit is een bullet point
-- Dit is een andere bullet point
+- <del>JSON</del> <ins>HTML</ins> Rest API's;
+- Hypermedia As The Engine Of State (HATEOS);
+- Declaratief, asynchroon en dynamisch;
+- 30+ jaar oude web standaarden centraal: HTTP, HTML, CSS;
+- Moderniseer met nieuwere API's: Fetch, Web Components, View Transitions, etc;
+- Tools versimpelen en/of bouwen op deze standaarden;
+- Weinig boilerplate;
+- BFF = SSR;
