--- a/src/content/slides/2.md
+++ b/src/content/slides/2.md
@@ -1,6 +1,8 @@
 ---
 title: Wat is een Hypermedia-Driven Application?
 pageType: single-column-page
+prev: /slides/1
+next: /slides/3
 ---
 
 - <del>JSON</del> <ins>HTML</ins> Rest API's;
