--- a/src/content/slides/3.md
+++ b/src/content/slides/3.md
@@ -1,7 +1,30 @@
 ---
-title: Voorbeeld API
-pageType: title-page
+title: "State: separation of concerns"
+pageType: single-column-page
 prev: /slides/2
+next: /slides/4
 ---
 
-## Rest in HTML vorm
+## Content
+
+**Domein**: Content editors
+
+**Managed in**: CMS
+
+## Data
+
+**Domein**: Backend
+
+**Managed in**: Database/Cloud/Backend
+
+## Presentation
+
+**Domein**: Design
+
+**Managed in**: HTML/CSS templates
+
+## Interaction
+
+**Domein**: Frontend
+
+**Managed in**: Client-side code
