Dynamic bullet points

--- a/src/content/slides/2.md
+++ b/src/content/slides/2.md
@@ -5,11 +5,8 @@ prev: /slides/1
 next: /slides/3
 ---
 
-- <del>JSON</del> <ins>HTML</ins> Rest API's;
-- Hypermedia As The Engine Of State (HATEOS);
-- Declaratief, asynchroon en dynamisch;
-- 30+ jaar oude web standaarden centraal: HTTP, HTML, CSS;
-- Moderniseer met nieuwere API's: Fetch, Web Components, View Transitions, etc;
-- Tools versimpelen en/of bouwen op deze standaarden;
-- Weinig boilerplate;
-- BFF = SSR;
+<p
+    hx-get="/partial/bullet-points/hda/1"
+    hx-trigger="load"
+    hx-swap="outerHTML"
+>Loading...</p>
