--- a/src/content/slides/4.md
+++ b/src/content/slides/4.md
@@ -5,10 +5,8 @@ prev: /slides/3
 next: /slides/5
 ---
 
-- Backend For Frontend
-- SSG vs SSR vs client-side rendering
-- Integrations
-- Astro Islands
-- Content Collections
-- View Transitions
-- Partials
+<p
+    hx-get="/partial/bullet-points/astro/1"
+    hx-trigger="load"
+    hx-swap="outerHTML"
+>Loading...</p>
