--- a/src/content/slides/5.md
+++ b/src/content/slides/5.md
@@ -5,9 +5,8 @@ prev: /slides/4
 next: /slides/6
 ---
 
-- Boost anchors
-- HTTP Methods
-- Custom Targets
-- Custom Triggers
-- HTMX HTTP Headers
-- Custom Events
+<p
+    hx-get="/partial/bullet-points/htmx/1"
+    hx-trigger="load"
+    hx-swap="outerHTML"
+>Loading...</p>
