--- a/src/content/slides/6.md
+++ b/src/content/slides/6.md
@@ -4,8 +4,8 @@ pageType: single-column-page
 prev: /slides/5
 ---
 
-- Focus op interacties
-- Gebruik data attributes
-- Gebruik (custom) HTML events
-- Gebruik web components (Litelement?) voor intensieve interacties
-- HDA friendly tooling: Alpine.js, \_hyperscript
+<p
+    hx-get="/partial/bullet-points/scripting/1"
+    hx-trigger="load"
+    hx-swap="outerHTML"
+>Loading...</p>
