Two column page

--- a/src/content/slides/3.md
+++ b/src/content/slides/3.md
@@ -1,30 +1,42 @@
 ---
 title: "State: separation of concerns"
-pageType: single-column-page
+pageType: two-column-page
 prev: /slides/2
 next: /slides/4
 ---
 
-## Content
+<div class="colored-block blue">
+    <h2>Content state</h2>
+    <p>
+        <b>Domein</b>: Content editors
+        <br>
+        <b>Managed in</b>: CMS
+    </p>
+</div>
 
-**Domein**: Content editors
+<div class="colored-block green">
+    <h2>Data state</h2>
+    <p>
+        <b>Domein</b>: Backend
+        <br>
+        <b>Managed in</b>: database/cloud/backend services
+    </p>
+</div>
 
-**Managed in**: CMS
+<div class="colored-block orange">
+    <h2>Presentation state</h2>
+    <p>
+        <b>Domein</b>: Design / Frontend
+        <br>
+        <b>Managed in</b>: Backend for Frontend (HTML/CSS)
+    </p>
+</div>
 
-## Data
-
-**Domein**: Backend
-
-**Managed in**: Database/Cloud/Backend
-
-## Presentation
-
-**Domein**: Design
-
-**Managed in**: HTML/CSS templates
-
-## Interaction
-
-**Domein**: Frontend
-
-**Managed in**: Client-side code
+<div class="colored-block magenta">
+    <h2>Interaction state</h2>
+    <p>
+        <b>Domein</b>: Frontend
+        <br>
+        <b>Managed in</b>: Client-side code
+    </p>
+</div>
